// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnackbarContent Align action buttons to the first row when toast content with action and multiple lines of text [JPT-4487] 1`] = `
<StylesProvider
  injectFirst={true}
>
  <Component>
    <RcSnackbarContent
      action={
        Array [
          <RcSnackbarAction
            disableRipple={true}
            size="medium"
            variant="text"
          >
            test
          </RcSnackbarAction>,
        ]
      }
      message="default text"
      messageAlign="center"
      size="medium"
      type="success"
    />
  </Component>
</StylesProvider>
`;

exports[`SnackbarContent should render 1`] = `
<StylesProvider
  injectFirst={true}
>
  <Component>
    <RcSnackbarContent
      message="default text"
      messageAlign="center"
      size="medium"
      type="success"
    />
  </Component>
</StylesProvider>
`;
